# image-analysis

./: CMakeLists.txt  README.md  brightness.py  image_property.py
src/: brightness.cpp
